UI tweaks + Display/Controller role selction when starting + remover technical wording + select translation
